[package]
  name = "wemo"
  version = "0.0.6"
  authors = [ "Brandon Thomas <bt@brand.io>, <echelon@gmail.com>" ]
  description = "A library for interacting with Belkin WeMo home automation devices."
  keywords = [ "WeMo", "Belkin", "home", "automation", "UPNP" ]
  license-file = "LICENSE.md"
  readme = "README.md"
  repository = "https://github.com/echelon/wemo.rs"

[lib]
  name = "wemo"
  path = "src/lib.rs"

[dependencies]
  mio = "0.3.*"
  regex = "0.1.*"
  time = "0.1.*"
  url = "0.2.*"

