[package]
  name = "wemo"
  version = "0.0.7"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "A library for interacting with Belkin WeMo home automation devices."
  keywords = [ "WeMo", "Belkin", "home", "automation", "UPNP" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/wemo.rs"

[lib]
  name = "wemo"
  path = "src/lib.rs"

[dependencies]
  log = "0.3.*"
  mio = "0.5.*"
  regex = "0.1.*"
  time = "0.1.*"
  url = "0.5.*"

