[package]
  name = "wemo"
  version = "0.0.9"
  authors = [ "Brandon Thomas <bt@brand.io>", "Brandon Thomas <echelon@gmail.com>" ]
  description = "A library for interacting with Belkin WeMo home automation devices."
  keywords = [ "WeMo", "Belkin", "home", "automation", "UPNP" ]
  license = "BSD-4-Clause"
  readme = "README.md"
  repository = "https://github.com/echelon/wemo.rs"

[lib]
  name = "wemo"
  path = "src/lib.rs"

[dependencies]
  iron = { version = "0.4.*", optional = true }
  lazy_static = "0.2.*"
  log = "0.3.*"
  mio = "0.5.*"
  persistent = { version = "0.2.*", optional = true }
  regex = "0.1.*"
  time = "0.1.*"
  url = "1.2.*"
  urlencoded = { version = "0.4.*", optional = true }

[features]
  # Optionally support subscribing to devices.
  default = ["subscriptions"]
  subscriptions = ["iron", "persistent", "urlencoded"]
